--- a/home-assistant/Dockerfile
+++ b/home-assistant/Dockerfile
@@ -3,8 +3,7 @@ FROM python:3-alpine
 MAINTAINER molobrakos
 
 VOLUME /config
-
-WORKDIR /usr/src/app
+WORKDIR /app
 
 RUN apk add --no-cache --update \
     gcc \
@@ -13,12 +12,13 @@ RUN apk add --no-cache --update \
     nmap \
     libsodium \
     && rm -rf /var/cache/apk/* \
-    ;
-
-RUN pip3 install --no-cache-dir --upgrade homeassistant
+    ; \
+    pip3 install --no-cache-dir --upgrade homeassistant; \
+    rm -r /root/.cache; \
+    rm -rf /var/cache/apk/*;
 
 EXPOSE 8123
 
 HEALTHCHECK CMD curl -f http://localhost:8123/ || exit 1
 
-CMD [ "python", "-m", "homeassistant", "--config", "/config" ]
+CMD [ "hass", "--config", "/config" ]
