--- a/home-assistant/Dockerfile.dev
+++ b/home-assistant/Dockerfile.dev
@@ -2,3 +2,6 @@ FROM molobrakos/home-assistant:base
 
 RUN pip3 install --no-cache-dir --upgrade \
     https://github.com/home-assistant/home-assistant/archive/dev.zip
+
+USER hass
+CMD [ "hass", "--config", "/config" ]
