--- a/lms/Dockerfile
+++ b/lms/Dockerfile
@@ -7,21 +7,21 @@ VOLUME /config /music /logs /cache
 
 WORKDIR /lms
 
-RUN apt-get update
-RUN apt-get -y install wget supervisor faad flac lame sox libio-socket-ssl-perl
-
-RUN wget -q http://downloads.slimdevices.com/LogitechMediaServer_v7.9.0/logitechmediaserver_7.9.0_amd64.deb
-RUN dpkg -i *.deb && \
-    rm *.deb && \
-    apt-get clean
-
-RUN adduser --no-create-home --disabled-login --disabled-password --gecos "" lms
-
-RUN ls
+RUN apt-get update && \
+    apt-get -y install wget supervisor faad flac lame sox libio-socket-ssl-perl && \
+    wget -q http://downloads.slimdevices.com/LogitechMediaServer_v7.9.0/logitechmediaserver_7.9.0_amd64.deb && \
+    dpkg -i *.deb && \
+    rm -f *.deb && \
+    apt-get -y autoremove && \
+    apt-get -y clean && \
+    rm -rf /var/lib/apt/lists/* && \
+    rm -rf /tmp/* && \
+    rm -rf /var/tmp/* && \
+    useradd --user-group --home-dir /lms --shell /bin/false lms
 
 EXPOSE 3483 3483/udp 9000
 
-HEALTHCHECK CMD curl -f http://localhost:9000/api/ || exit 1
+HEALTHCHECK CMD curl -f http://localhost:9000 || exit 1
 
 USER lms
 
