--- a/home-assistant/Dockerfile
+++ b/home-assistant/Dockerfile
@@ -16,7 +16,7 @@ RUN apk add --no-cache --update \
     rm -rf /root/.cache && \
     rm -rf /var/cache/apk/* \
 	&& \
-    adduser -H -D -s /bin/false hass \
+    adduser -H -D -s /bin/false home-assistant \
 	&& \
     chmod u+s /bin/ping \
     ;
