--- a/home-assistant/Dockerfile.dev
+++ b/home-assistant/Dockerfile.dev
@@ -3,5 +3,5 @@ FROM molobrakos/home-assistant:base
 RUN pip3 install --no-cache-dir --upgrade \
     https://github.com/home-assistant/home-assistant/archive/dev.zip
 
-USER hass
+USER home-assistant
 CMD [ "hass", "--config", "/config" ]
