--- a/motion/Dockerfile
+++ b/motion/Dockerfile
@@ -44,4 +44,6 @@ CMD test -e /config/motion.conf ||  cp /usr/local/etc/motion/motion-dist.conf /c
     meyectl startserver -c /config/motioneye.conf -d
 
 
-HEALTHCHECK CMD curl -f http://localhost:8765/ || exit 1
+HEALTHCHECK CMD curl -f http://localhost:8765/ && \
+                curl -f http://localhost:8080 && \
+                curl -f http://localhost:8081 || exit 1
