--- a/home-assistant/Dockerfile
+++ b/home-assistant/Dockerfile
@@ -1,27 +1,7 @@
-FROM python:3-alpine
+FROM molobrakos/home-assistant:base
 
-VOLUME /config
-WORKDIR /app
+RUN pip3 install --no-cache-dir --upgrade \
+    homeassistant
 
-RUN apk add --no-cache --update \
-    gcc \
-    musl-dev \
-    linux-headers \
-    nmap \
-    libsodium \
-    curl \
-	ffmpeg \
-	&& \
-    pip3 install --no-cache-dir --upgrade colorlog \
-	&& \
-    rm -rf /root/.cache && \
-    rm -rf /var/cache/apk/* \
-	&& \
-    adduser -H -D -s /bin/false home-assistant \
-	&& \
-    chmod u+s /bin/ping \
-    ;
-
-EXPOSE 8123
-
-HEALTHCHECK CMD curl -f http://localhost:8123/api/ || exit 1
+USER home-assistant
+CMD [ "hass", "--config", "/config"]
