--- a/lms/Dockerfile
+++ b/lms/Dockerfile
@@ -8,7 +8,7 @@ VOLUME /config /music /logs /cache
 WORKDIR /lms
 
 RUN apt-get update && \
-    apt-get -y install curl supervisor faad flac lame sox libio-socket-ssl-perl && \
+    apt-get -y install curl pv supervisor faad flac lame sox libio-socket-ssl-perl && \
     curl -Os http://downloads.slimdevices.com/LogitechMediaServer_v7.9.0/logitechmediaserver_7.9.0_amd64.deb && \
     dpkg -i *.deb && \
     rm -f *.deb && \
