--- a/lms/Dockerfile
+++ b/lms/Dockerfile
@@ -9,7 +9,9 @@ WORKDIR /lms
 
 RUN apt-get update && \
     apt-get -y install curl pv supervisor faad flac lame sox libio-socket-ssl-perl && \
-    curl -Os http://downloads.slimdevices.com/LogitechMediaServer_v7.9.0/logitechmediaserver_7.9.0_amd64.deb && \
+    curl -Os \
+    # http://downloads.slimdevices.com/LogitechMediaServer_v7.9.1/logitechmediaserver_7.9.1_amd64.deb && \
+    http://downloads-origin.slimdevices.com/nightly/7.9/sc/ffc273f/logitechmediaserver_7.9.1~1508904967_amd64.deb && \
     dpkg -i *.deb && \
     rm -f *.deb && \
     apt-get -y autoremove && \
