--- a/home-assistant/Dockerfile.base
+++ b/home-assistant/Dockerfile.base
@@ -9,6 +9,8 @@ RUN apk add --no-cache --update \
     linux-headers \
     nmap \
     libsodium \
+    make \
+    cython \
     curl \
 	ffmpeg \
 	&& \
