--- a/lms/Dockerfile
+++ b/lms/Dockerfile
@@ -9,10 +9,8 @@ WORKDIR /lms
 
 RUN apt-get update && \
     apt-get -y install curl pv supervisor faad flac lame sox libio-socket-ssl-perl && \
-    curl -Os \
-    # http://downloads.slimdevices.com/LogitechMediaServer_v7.9.1/logitechmediaserver_7.9.1_amd64.deb && \
-    #http://downloads-origin.slimdevices.com/nightly/7.9/sc/ffc273f/logitechmediaserver_7.9.1~1508904967_amd64.deb && \
-    http://downloads-origin.slimdevices.com/nightly/7.9/sc/184cc48/logitechmediaserver_7.9.1~1512734075_amd64.deb && \
+    curl -O \
+    http://downloads-origin.slimdevices.com/nightly$(curl http://downloads-origin.slimdevices.com/nightly/?ver=7.9 | grep -o '/7.9[^"]*amd64.deb') && \
     dpkg -i *.deb && \
     rm -f *.deb && \
     apt-get -y autoremove && \
