--- a/mosquitto/Dockerfile
+++ b/mosquitto/Dockerfile
@@ -4,7 +4,7 @@ VOLUME /config
 WORKDIR /app
 
 RUN apk add --no-cache --update \
-      mosquitto mosquitto-clients \
+      mosquitto mosquitto-clients dumb-init \
         && \
     rm -rf /root/.cache && \
     rm -rf /var/cache/apk/* \
@@ -16,6 +16,6 @@ EXPOSE 1883
 
 USER mqtt
 
-ENTRYPOINT [ "mosquitto", "-c", "/config/mosquitto.conf" ]
+ENTRYPOINT [ "dumb-init", "mosquitto", "-c", "/config/mosquitto.conf" ]
 
 HEALTHCHECK CMD nc -z localhost 1883 || exit 1
