--- a/home-assistant/Dockerfile.base
+++ b/home-assistant/Dockerfile.base
@@ -30,6 +30,6 @@ RUN apk add --no-cache --update \
 
 EXPOSE 8123
 
-ENTRYPOINT ["/usr/bin/dumb-init", "--"]
+ENTRYPOINT ["dumb-init", "--"]
 
 HEALTHCHECK CMD curl -f -s -o /dev/null http://localhost:8123/api/ || exit 1
