Upgrade to edge

--- a/lighttpd/Dockerfile
+++ b/lighttpd/Dockerfile
@@ -1,18 +1,19 @@
-FROM alpine
+FROM alpine:edge
 
-RUN apk add --update --no-cache \
+RUN set -x \
+  && apk add --update --no-cache \
         lighttpd curl dumb-init \
   && rm -rf /var/cache/apk/* \
-  && rm -rf /var/cache/apk/* \
-#  && adduser -H -D -s /bin/false www-data \
+  && rm -rf /var/cache/misc/* \
+  && adduser -H -D -s /bin/false -G www-data www-data \
     ;
 
 EXPOSE 80 443
-VOLUME /var/www /etc/lighttpd
+VOLUME /var/www /var/cache/lighttpd /var/log/etc/lighttpd
 WORKDIR /app
 
 USER www-data
 
-ENTRYPOINT [ "dumb-init", "lighttpd", "-D", "-f", "/etc/lighttpd/lighttpd.conf"]
+CMD [ "dumb-init", "lighttpd", "-D", "-f", "/etc/lighttpd/lighttpd.conf"]
 
 HEALTHCHECK --interval=1m --timeout=3s CMD curl --head --fail --silent http://localhost > /dev/null || exit 1
