--- a/lighttpd/Dockerfile
+++ b/lighttpd/Dockerfile
@@ -7,15 +7,16 @@ RUN set -x \
   && rm -rf /var/cache/misc/* \
   && deluser xfs \
   && usermod -u 33 lighttpd \
-#  && adduser -u 33 -H -D -s /bin/false -G www-data www-data \
     ;
+
+# Default user xfs (x font server) in alpine has uid 33 which
+# corresponds to user www-data in debian/ubuntu. Lets delete 
+# it and change uid of the lighttpd user
 
 EXPOSE 80 443
 VOLUME /var/www /var/cache/lighttpd /var/log/etc/lighttpd
 WORKDIR /app
 
-# USER www-data
-
-CMD [ "dumb-init", "lighttpd", "-D", "-f", "/etc/lighttpd/lighttpd.conf"]
+CMD [ "dumb-init", "--", "lighttpd", "-D", "-f", "/etc/lighttpd/lighttpd.conf"]
 
 HEALTHCHECK --interval=1m --timeout=3s CMD curl --head --fail --silent http://localhost > /dev/null || exit 1
