--- a/home-assistant/Dockerfile.base
+++ b/home-assistant/Dockerfile.base
@@ -33,4 +33,4 @@ EXPOSE 8123
 
 ENTRYPOINT ["dumb-init", "--"]
 
-HEALTHCHECK CMD curl --max-time 5 --fail --silent --output /dev/null http://localhost:8123/api/ || exit 1
+HEALTHCHECK CMD curl --max-time 5 --fail --silent --output /dev/null http://localhost:8123/manifest.json || exit 1
