Switched to debian:stable-slim

--- a/certbot/Dockerfile
+++ b/certbot/Dockerfile
@@ -1,19 +1,20 @@
-FROM alpine:latest
+FROM debian:stable-slim
 
 VOLUME /app
 WORKDIR /app
 
-RUN apk add --no-cache --update \
-    certbot \
-	&& \
-	rm -rf /root/.cache && \
-    rm -rf /var/cache/apk/* \
-    && \
-    adduser -H -D -s /bin/false certbot \
-    ;
+RUN set -x && \
+    apt-get update && \
+    apt-get -y install certbot && \
+    apt-get -y autoremove && \
+    apt-get -y clean && \
+    rm -rf /var/lib/apt/lists/* && \
+    rm -rf /tmp/* && \
+    rm -rf /var/tmp/* && \
+    useradd --user-group --no-create-home --shell /bin/false certbot
 
 EXPOSE 443
-				
-# USER certbot
+
+USER certbot
 
 ENTRYPOINT [ "certbot", "--config-dir", "/app/config", "--work-dir", "/app/work", "--logs-dir", "/app/log" ]
