--- a/lighttpd/Dockerfile
+++ b/lighttpd/Dockerfile
@@ -1,16 +1,23 @@
-FROM alpine:edge
+FROM debian:stable-slim
 
-RUN set -x \
-  && apk add --update --no-cache \
-        lighttpd curl dumb-init shadow perl \
-  && rm -rf /var/cache/apk/* \
-  && rm -rf /var/cache/misc/* \
-  && deluser xfs \
-  && usermod -u 33 lighttpd \
-    ;
+RUN set -x && \
+    apt-get update && \
+    apt-get -y install lighttpd curl dumb-init && \
+    apt-get -y autoremove && \
+    apt-get -y clean && \
+    rm -rf /var/lib/apt/lists/* && \
+    rm -rf /tmp/* && \
+    rm -rf /var/tmp/* && \
+    useradd --user-group --no-create-home --shell /bin/false lighttpd
+
+#  && rm -rf /var/cache/apk/* \
+#  && rm -rf /var/cache/misc/* \
+#  && deluser xfs \
+#  && usermod -u 33 lighttpd \
+#    ;
 
 # Default user xfs (x font server) in alpine has uid 33 which
-# corresponds to user www-data in debian/ubuntu. Lets delete 
+# corresponds to user www-data in debian/ubuntu. Lets delete
 # it and change uid of the lighttpd user
 
 EXPOSE 80 443
