--- a/lighttpd/Dockerfile
+++ b/lighttpd/Dockerfile
@@ -7,18 +7,7 @@ RUN set -x && \
     apt-get -y clean && \
     rm -rf /var/lib/apt/lists/* && \
     rm -rf /tmp/* && \
-    rm -rf /var/tmp/* && \
-    useradd --user-group --no-create-home --shell /bin/false lighttpd
-
-#  && rm -rf /var/cache/apk/* \
-#  && rm -rf /var/cache/misc/* \
-#  && deluser xfs \
-#  && usermod -u 33 lighttpd \
-#    ;
-
-# Default user xfs (x font server) in alpine has uid 33 which
-# corresponds to user www-data in debian/ubuntu. Lets delete
-# it and change uid of the lighttpd user
+    rm -rf /var/tmp/*
 
 EXPOSE 80 443
 VOLUME /var/www /var/cache/lighttpd /var/log/lighttpd /etc/lighttpd
