--- a/motioneye/Makefile
+++ b/motioneye/Makefile
@@ -1,7 +1,7 @@
-NAME="motioneye"
-CONTAINER="$(NAME)"
-IMAGE="molobrakos/$(NAME):latest"
-CONFIG="$(HOME)/.docker-$(CONTAINER)"
+NAME=motioneye
+CONTAINER=$(NAME)
+IMAGE=molobrakos/$(NAME):latest
+CONFIG=$(HOME)/.docker-$(CONTAINER)
 MEDIA=/mnt/motion
 
 build:
@@ -22,14 +22,14 @@ run: config
 	docker run \
 	--detach \
 	--restart=always \
-	--name="$(CONTAINER)" \
-	--hostname="$(CONTAINER)" \
+	--name=$(CONTAINER) \
+	--hostname=$(CONTAINER) \
 	--net=bridge \
         -p 8080:8080 \
         -p 8081:8081 \
         -p 8082:8082 \
         -p 8765:8765 \
         -v /etc/localtime:/etc/localtime:ro \
-        -v $CONFIG:/config \
-        -v $MEDIA:/media \
+        -v $(CONFIG):/config \
+        -v $(MEDIA):/media \
 	$(IMAGE)
