--- a/home-assistant/Dockerfile.debian
+++ b/home-assistant/Dockerfile.debian
@@ -15,6 +15,8 @@ RUN set -x && \
       curl \
       libffi-dev \
       ffmpeg \
+      net-tools \  # arp
+      iputils-ping \  # ping
       && \
     \
     apt-get -y autoremove && \
