--- a/home-assistant/Dockerfile.debian-dev
+++ b/home-assistant/Dockerfile.debian-dev
@@ -15,6 +15,8 @@ RUN set -x && \
       curl \
       libffi-dev \
       ffmpeg \
+      net-tools \
+      iputils-ping \
       && \
     \
     apt-get -y autoremove && \
