--- a/home-assistant/Dockerfile.debian-dev
+++ b/home-assistant/Dockerfile.debian-dev
@@ -33,11 +33,9 @@ RUN set -x && \
 VOLUME /config
 WORKDIR /app
 
-RUN pip3 install --no-cache-dir --upgrade colorlog cchardet cython uvloop pywebpush
+RUN pip3 install --no-cache-dir --upgrade pip colorlog cchardet cython uvloop pywebpush
 
 EXPOSE 8123
-
-ENTRYPOINT ["dumb-init", "--"]
 
 HEALTHCHECK CMD curl --max-time 5 --fail --silent --output /dev/null http://localhost:8123/manifest.json || exit 1
 
