--- a/mosquitto/Dockerfile
+++ b/mosquitto/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 
 RUN set -x && \
     apt-get update && \
-    apt-get -y install mosquitto mosquitto-clients ca-certificates dumb-init && \
+    apt-get -y --no-install-recommends install mosquitto mosquitto-clients ca-certificates dumb-init && \
     apt-get -y autoremove && \
     apt-get -y clean && \
     rm -rf /var/lib/apt/lists/* && \
