--- a/certbot/Dockerfile
+++ b/certbot/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 
 RUN set -x && \
     apt-get update && \
-    apt-get -y install certbot && \
+    apt-get -y --no-install-recommends install certbot && \
     apt-get -y autoremove && \
     apt-get -y clean && \
     rm -rf /var/lib/apt/lists/* && \
