no install recommends

--- a/mosquitto/Dockerfile
+++ b/mosquitto/Dockerfile
@@ -4,8 +4,9 @@ VOLUME /config
 WORKDIR /app
 
 RUN set -x && \
+    export DEBIAN_FRONTEND=noninteractive && \
     apt-get update && \
-    apt-get -y install mosquitto mosquitto-clients ca-certificates dumb-init && \
+    apt-get -y --no-install-recommends install mosquitto mosquitto-clients ca-certificates dumb-init && \
     apt-get -y autoremove && \
     apt-get -y clean && \
     rm -rf /var/lib/apt/lists/* && \
